--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Card from '../components/Card.astro';
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 			<Card
-				href="/about"
+				href='/about'
 				title="About"
 				body="Go to about page."
 			/>
